# AcraNetwork

./: .gitignore  .travis.yml  CHANGELOG.md  CLAUDE.md  ColouredOutput.py  CustomiNetXPackets.py  IENA.py  LICENSE  MANIFEST.in  McastSocket.py  ParserAligned.py  Pcap.py  README.md  README.rst  README.txt  SimpleEthernet.py  _arp.pcap  _icmp.pcap  _igmp.pcap  ch10_uart.pcap  cibuildwheel.toml  iNetX.py  iNetXStream.py  mf.hex  setup.cfg  setup.py  test_npd.pcap  test_npd_rs232.pcap
AcraNetwork/: Chapter10.py  Chapter7.py  ColouredOutput.py  CustomiNetXPackets.py  Ethernet.py  GRE.py  Golay.py  IENA.py  MPEGTS.py  McastSocket.py  NPD.py  ParserAligned.py  Pcap.py  SamDec008.py  SimpleEthernet.py  __init__.py  __version__.py  iNET.py  iNetX.py  iNetXStream.py  nanotime.py  ptptime.py
LiveAnalysis/: adc_simulator.py  live_analysis.py
docs/: IENA.rst  Makefile  chapter10.rst  chapter11.rst  chapter24.rst  conf.py  index.rst  inet.rst  inetx.rst  make.bat  mpegts.rst  npd.rst  parseraligned.rst  pcap.rst  samdec008.rst  simpleethernet.rst
examples/: ADAU_adau_FMT_1.tmt  README.md  README.txt  adau_to_ch10.py  analyse_mpeg_over_inetx.py  benchmark_mcast_reception.py  benchmark_pcap.py  benchmark_udp_generation.py  ch10_recorder.py  ch10_to_pcap.py  debug.pcap  debug_send_udp.py  extract_ts.py  full.tmats  gen_ch10_file.py  live_monitoring.py  live_monitoring_socketserver.py  parse_mpeg_pcap.py  parser_aligned_pcap_example.py  pcap_monitor.py  pcap_to_ascii.py  pkg_gen.ini  proxy_to_udp.py  simple_mcast_capture.py  simple_parser_packets_from_pcap.py  test.pcap  test.tmats  tx_c10_over_gre.py  tx_iena_udp.py  tx_inetx_udp.py  validate_ch10.py  validate_fast_seq.py  validate_pcap.py  wrap_tmats.py  write_pcap_file.py
test/: .coveragerc  OPTIMIZATION_SUMMARY.md  audio_gen.ts  audio_gen2.ts  audio_pkt.ts  captured_llp.pcap  ch10_arinc.pcap  ch10_format_1_looks_like2.pcap  ch10_uart2.pcap  combined.pcap  corrupt_ienad.pcap  fill.pickle  generated_eth.pcap  iena_test.pcap  ienad.pcap  ienam_multiple.pcap  inetx_test.pcap  mnacq.csv  mnacq2.pcap  mpegs_ch0.ts  npd_ref.pcap  opt_ch7.py  opt_ch7_benchmarks.py  opt_ch7_buffer_slicing.py  opt_ch7_final.py  opt_ch7_precise.py  opt_ch7_realistic.py  opt_ch7_remaining.py  opt_ch7_safe.py  opt_patches.py  profile_ch7.py  test_afdx.py  (+22 more)
(+93 files in other folders)
