[metadata]
name = AcraNetwork
version = attr: AcraNetwork.__version__.__version__
author = Diarmuid Collins
author_email = dcollins@curtisswright.com
url = https://github.com/diarmuidcwc/AcraNetwork
description = Classes and utilities to support Flight Test Instrumentation Ethernet networks
long_description = file: README.md
long_description_content_type = text/markdown
description_content_type = text/plain
keywords = ACRA, iNetX, FTI, IENA
license = GNU GPLv3
classifiers =
    Programming Language :: Python
    Operating System :: OS Independent
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Topic :: Software Development :: Libraries :: Python Modules

[options]
include_package_data = True
packages = find:
python_requires = >=3.7
install_requires =
scripts = examples/tx_inetx_udp.py, examples/validate_pcap.py, examples/validate_ch10.py, examples/tx_iena_udp.py,examples/pkg_gen.ini, examples/adau_to_ch10.py, examples/ch10_to_pcap.py, examples/ch10_recorder.py, 


[options.package_data]
* = *.md


#      scripts=['examples/tx_inetx_udp.py', 'examples/tx_iena_udp.py', 'examples/validate_pcap.py', 'examples/pkg_gen.ini'],
